[gd_scene load_steps=10 format=3 uid="uid://di6ha8bytuevk"]

[ext_resource type="Script" path="res://scripts/foca_boss.gd" id="1_2j8c7"]
[ext_resource type="Texture2D" uid="uid://cv0064yjftv1q" path="res://img/Focas/FocaBoss/Boss2.png" id="2_i8eqt"]
[ext_resource type="Texture2D" uid="uid://coa3nyincxajs" path="res://img/Focas/FocaBoss/Boss1.png" id="3_lg52b"]
[ext_resource type="Texture2D" uid="uid://btejyy7pajj7g" path="res://img/Focas/FocaBoss/Boss4.png" id="4_nkn1b"]
[ext_resource type="Texture2D" uid="uid://csuglpsk870wq" path="res://img/Focas/FocaBoss/Boss5.png" id="5_5o6nj"]
[ext_resource type="Texture2D" uid="uid://b0phothovet6p" path="res://img/Focas/FocaBoss/Boss6.png" id="6_dllrj"]
[ext_resource type="Texture2D" uid="uid://v12rk1dq11bl" path="res://img/Focas/FocaBoss/Boss3.png" id="7_ohqop"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tkj1x"]
size = Vector2(28, 294)

[sub_resource type="SpriteFrames" id="SpriteFrames_h404i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i8eqt")
}, {
"duration": 1.0,
"texture": ExtResource("3_lg52b")
}, {
"duration": 1.0,
"texture": ExtResource("4_nkn1b")
}],
"loop": true,
"name": &"Ataque",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_lg52b")
}, {
"duration": 1.0,
"texture": ExtResource("5_5o6nj")
}, {
"duration": 1.0,
"texture": ExtResource("6_dllrj")
}],
"loop": true,
"name": &"Morir",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i8eqt")
}, {
"duration": 1.0,
"texture": ExtResource("3_lg52b")
}, {
"duration": 1.0,
"texture": ExtResource("7_ohqop")
}],
"loop": true,
"name": &"Moverse",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_lg52b")
}, {
"duration": 1.0,
"texture": ExtResource("3_lg52b")
}, {
"duration": 1.0,
"texture": ExtResource("3_lg52b")
}],
"loop": true,
"name": &"Quieto",
"speed": 5.0
}]

[node name="foca_boss" type="PathFollow2D"]
loop = false
script = ExtResource("1_2j8c7")

[node name="Area2D" type="Area2D" parent="." groups=["focas"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(81, 42)
shape = SubResource("RectangleShape2D_tkj1x")

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-81, 38)
rotation = -3.14052
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_h404i")
animation = &"Quieto"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
